--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,79 @@ a {
 * {
   box-sizing: border-box;
 }
+.login {
+  min-height: 100vh;
+}
+.bg-image {
+  background-image: url('https://wallpapercave.com/wp/oYIyvdX.jpg');
+  background-size: cover;
+  background-position: center;
+}
+.login-heading {
+  font-weight: 300;
+}
+.btn-login {
+  font-size: 0.9rem;
+  letter-spacing: 0.05rem;
+  padding: 0.75rem 1rem;
+}
+.invalid
+{
+  border-color: red!important;
+}
+.width-100{
+  width:100%;
+}
+.justify-content-space-around{
+  justify-content: space-around;
+}
+.flex-direction-column{
+  flex-direction: column;
+}
+.color-white{
+  color:white;
+}
+.fs-40{
+  font-size:40px;
+}
+.padding-top-5vh{
+  padding-top: 5vh;
+}
+.download {
+  display: inline-block;
+    text-decoration: none;
+    border: 2px solid #D9EDFF;
+    color: #116dfa;
+    font-size: 22px;
+    text-align: center;
+    line-height: 38px;
+    border-radius: 100px;
+    padding: 0 22px;
+    width: 100%;
+    transition: all 0.3s;
+    background: #fff;
+    margin-right: 40px;
+}
+
+.download:hover {
+  box-shadow: 0 2px 4px rgba(83, 100, 255, 0.45);
+  background: #e1e1e1;
+}
+.font-weight-600{
+  font-weight: 600;
+}
+.width-25vw{
+  width: 25vw;
+}
+.m-r-10{
+  margin-right: 10px;
+}
+.m-r-18{
+  margin-right: 18px;
+}
+.fs-22{
+  font-size:22px !important;
+}
+.p-t-24{
+  padding-top:24vh;
+}
