--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,7 +31,7 @@ a {
   padding: 0.75rem 1rem;
 }
 .invalid {
-  color: #d32f2f !important;
+  border-color: #d32f2f !important;
 }
 .width-100 {
   width: 100%;
